--- a/views/forgot_password.ejs
+++ b/views/forgot_password.ejs
@@ -42,7 +42,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
-    <!-- <script>
+    <script>
       addEventListener(
         "load",
         function () {
@@ -54,11 +54,11 @@
       function hideURLbar() {
         window.scrollTo(0, 1);
       }
-    </script> -->
-
+    </script>
     <!-- Custom Theme files -->
     <!-- <link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all"> -->
     <link href="css/style.css" type="text/css" rel="stylesheet" media="all" />
+    <link rel="stylesheet" href="css/forgot_password.css" />
     <!-- font-awesome icons -->
     <link href="css/font-awesome.min.css" rel="stylesheet" />
     <!-- //Custom Theme files -->
@@ -151,60 +151,98 @@
         <li class="breadcrumb-item active" aria-current="page">Login</li>
       </ol>
     </nav>
-    <!-- //breadcrumbs -->
-    <!-- /signin  -->
-    <div class="modal-body align-w3">
-      <%- include('./partials/messages.ejs') %>
 
-      <form action="/signin" method="post" class="p-sm-3">
-        <div class="form-group">
-          <label for="recipient-name" class="col-form-label">Email</label>
-          <input
-            class="form-control"
-            type="email"
-            name="email"
-            placeholder="Email"
-            id="recipient-name"
-            required=""
-          />
-        </div>
-        <div class="form-group">
-          <label for="password" class="col-form-label">Password</label>
-          <input
-            type="password"
-            class="form-control"
-            name="password"
-            id="password"
-            placeholder="Password"
-            required=""
-          />
-        </div>
-        <div class="right-w3l">
-          <input type="submit" class="form-control bg-theme" value="Login" />
-        </div>
-        <!-- Remember me and forgot password -->
-        <div class="row sub-w3l my-3">
-          <div class="col-sm-6 sub-w3layouts_hub">
-            <input type="checkbox" id="brand1" value="" />
-            <label for="brand1" class="text-secondary">
-              <span></span>Remember me?</label
+    <div class="container">
+      <!-- Login Breadcrum -->
+
+      <ul class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+        <li class="breadcrumb-item"><a href="login.html">Log in</a></li>
+        <li class="breadcrumb-item">Forgotten password</li>
+      </ul>
+      <hr />
+
+      <!-- Login Breadcrum Ends-->
+
+      <!-- forgot password notification -->
+      <div>
+        <h3>
+          To reset your password, submit your username or your email address
+          below. If we can find you in the database, an email will be sent to
+          your email address, with instructions how to get access again.
+        </h3>
+      </div>
+      <hr />
+
+      <form
+        autocomplete="off"
+        action="/forgot_password"
+        method="post"
+        accept-charset="utf-8"
+        id="mform1"
+        class="mform"
+      >
+        <fieldset class="clearfix" id="id_searchbyusername">
+          <legend class="ftoggler">Search by username or email</legend>
+          <div class="fcontainer clearfix">
+            <div id="fitem_id_username" class="form-group row fitem">
+              <div class="col-md-3">
+                <span class="float-sm-right text-nowrap"> </span>
+                <label class="col-form-label d-inline" for="id_username">
+                  Username or email
+                </label>
+              </div>
+              <div class="col-md-9 form-inline felement" data-fieldtype="text">
+                <input
+                  type="text"
+                  class="form-control"
+                  name="user"
+                  id="user"
+                  value=""
+                  size="20"
+                  autocomplete="email"
+                />
+              </div>
+              <div
+                class="form-control-feedback"
+                style="background-color: black; width: 50%; color: red"
+              >
+                <%- include('./partials/messages.ejs') %>
+              </div>
+            </div>
+            <div
+              id="fitem_id_submitbuttonusername"
+              class="form-group row fitem femptylabel"
             >
+              <div class="col-md-3">
+                <span class="float-sm-right text-nowrap"> </span>
+                <label
+                  class="col-form-label d-inline"
+                  for="id_submitbuttonusername"
+                >
+                </label>
+              </div>
+              <div
+                class="col-md-9 form-inline felement"
+                data-fieldtype="submit"
+              >
+                <input
+                  type="submit"
+                  class="btn btn-primary"
+                  name="submitbuttonusername"
+                  id="id_submitbuttonusername"
+                  value="Search"
+                />
+                <div
+                  class="form-control-feedback invalid-feedback"
+                  id="id_error_submitbuttonusername"
+                ></div>
+              </div>
+            </div>
           </div>
-          <div class="col-sm-6 forgot-w3l text-sm-right">
-            <a href="forgot_password.html" class="text-secondary"
-              >Forgot Password?</a
-            >
-          </div>
-        </div>
-        <p class="text-center dont-do text-secondary">
-          Don't have an account?
-          <a href="/register" class="text-theme-2 font-weight-bold">
-            Register Now</a
-          >
-        </p>
+        </fieldset>
       </form>
     </div>
-    <!-- //signin -->
 
     <!-- footer -->
     <footer class="footer py-md-5 pt-md-3 pb-sm-5">
@@ -212,7 +250,9 @@
         <div class="row p-sm-4 px-3 py-3">
           <div class="col-lg-4 footer-top mt-md-0 mt-sm-5">
             <h2>
-              <a class="navbar-brand" href="/"> Ideal Assignments Help </a>
+              <a class="navbar-brand" href="index.html">
+                Ideal Assignments Help
+              </a>
             </h2>
             <div class="fv3-contact mt-2">
               <p>
@@ -237,19 +277,19 @@
               <hr />
               <ul class="list-w3pvtits">
                 <li>
-                  <a href="/"> Home </a>
+                  <a href="index.html"> Home </a>
                 </li>
                 <li class="my-2">
-                  <a href="about"> About Us </a>
+                  <a href="about.html"> About Us </a>
                 </li>
                 <li class="my-2">
-                  <a href="portfolio"> Resources </a>
+                  <a href="resources.html"> Resources </a>
                 </li>
                 <li class="mb-2">
-                  <a href="single"> Blog </a>
+                  <a href="single.html"> Blog </a>
                 </li>
                 <li>
-                  <a href="contact"> Contact Us </a>
+                  <a href="contact.html"> Contact Us </a>
                 </li>
               </ul>
             </div>
@@ -260,19 +300,19 @@
               <hr />
               <ul class="list-w3pvtits">
                 <li>
-                  <a href="about"> Our Mission </a>
+                  <a href="about.html"> Our Mission </a>
                 </li>
                 <li class="my-2">
-                  <a href="single"> Latest posts </a>
+                  <a href="single.html"> Latest posts </a>
                 </li>
                 <li class="my-2">
-                  <a href="portfolio"> Explore </a>
+                  <a href="resources.html"> Explore </a>
                 </li>
                 <li class="mb-2">
-                  <a href="contact"> Find us </a>
+                  <a href="contact.html"> Find us </a>
                 </li>
                 <li>
-                  <a href="/"> Privacy Policy </a>
+                  <a href="index.html"> Privacy Policy </a>
                 </li>
               </ul>
             </div>
@@ -283,7 +323,7 @@
               <hr />
               <ul class="list-w3pvtits">
                 <!-- <li class="my-2">
-                                <a href="portfolio">
+                                <a href="resources.html">
                                     Explore
                                 </a>
                             </li> -->
@@ -301,7 +341,7 @@
                 </li>
 
                 <!-- <li class="mb-2">
-                                <a href="contact">
+                                <a href="contact.html">
                                     Find us
                                 </a>
                             </li> -->
